--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -24,6 +24,7 @@ $breakpoints: (
 @import 'intro';
 @import 'summary';
 @import 'author';
+@import 'card';
 @import 'pagination';
 @import 'main-menu';
 @import 'main-menu-mobile';
